<resources>
    <string name="app_name">The Bill Calculator</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="enter_number_of_people">Enter number of people</string>
    <string name="no_svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
</resources>